test/scc/stmt/semantic-errors/config.py
cmds = ['%test', '-fsyntax-only', '-log', '%output']